<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TACU</string>

    <string name="date">时间</string>
    <string name="open">开</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="close">收</string>
    <string name="up_down_value">涨跌额</string>
    <string name="up_down_rate">涨跌幅</string>
    <string name="volume">成交量</string>

    <string name="min_time">分时</string>
    <string name="min_1">1分钟</string>
    <string name="min_5">5分钟</string>
    <string name="min_15">15分钟</string>
    <string name="min_30">30分钟</string>
    <string name="hour_1">1小时</string>
    <string name="hour_6">6小时</string>
    <string name="hour_12">12小时</string>
    <string name="day_1">1天</string>
    <string name="week_1">1周</string>
    <string name="month_1">1月</string>
    <string name="more">更多</string>

    <string name="main_view">主图</string>
    <string name="second_view">副图</string>
    <string name="target_setting">指标设置</string>
    <string name="reset">重置</string>
    <string name="introduction">简介</string>
    <string name="introduction_ma">MA指标由一段时间内的收盘价之和取算数平均数后连线，可抚平短期波动，反映出长期趋势或周期。</string>
    <string name="introduction_boll">BOLL指标又叫布林带，其基本的形态是由三条轨道线组成的带状通道(中轨和上、下轨各一条)。中轨为价格的平均成本，上轨和下轨可分别视为价格的压力线和支撑线。</string>
    <string name="introduction_macd">MACD指标由一组曲线与图形组成，通过收盘时价格或指数的快变与慢变的指数移动平均值(EMA)之间的差计算出来，"S"指更短时段的EMA，而"L"则指较长时段的EMA，最常用的是12日及26日EMA</string>
    <string name="introduction_kdj">KDJ指标通过一个特定的周期(常为9日、9周等)内出现过的最高价、最低价及最后一个计算周期的收盘价及这三者之间的比例关系，来计算最后一个计算周期的未成熟随机值，然后根据平滑移动平均线的方法来计算K值、D值与J值，并绘成曲线图来研判价格走势</string>
    <string name="introduction_rsi">RS指标是比较价格升降运动以表达价格强度的技术分析工具，其中14日RS最具代表性。</string>
    <string name="introduction_wr">WR指标是一个振荡指标，是依价格的摆动点来度量是否处于超买或超卖的现象。它衡量多空双方创出的峰值(最高价)距每天收盘价的距离与一定时间内(如天、14天、28天等)的价格波动范围的比例，以提供出价格趋势反转的讯号。</string>
</resources>
