<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/content_bg_color_grey"
    android:orientation="vertical"
    android:paddingVertical="@dimen/dp_15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_15">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_boll_n"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/shape_chart_grey"
                android:digits="0123456789"
                android:gravity="center_vertical|right"
                android:inputType="number"
                android:maxLength="3"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="360" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="N"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_16"
                app:layout_constraintBottom_toBottomOf="@+id/ed_boll_n"
                app:layout_constraintLeft_toLeftOf="@+id/ed_boll_n"
                app:layout_constraintTop_toTopOf="@+id/ed_boll_n" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/ed_boll_p"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/shape_chart_grey"
                android:digits="0123456789"
                android:gravity="center_vertical|right"
                android:inputType="number"
                android:maxLength="3"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="360" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="P"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_sp_16"
                app:layout_constraintBottom_toBottomOf="@+id/ed_boll_p"
                app:layout_constraintLeft_toLeftOf="@+id/ed_boll_p"
                app:layout_constraintTop_toTopOf="@+id/ed_boll_p" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_15">

        <ImageView
            android:id="@+id/img_refresh_boll"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:src="@drawable/icon_refresh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/reset"
            android:textColor="@color/text_grey"
            android:textSize="@dimen/text_size_sp_16" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/content_bg_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingHorizontal="@dimen/dp_15"
        android:text="@string/introduction"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_sp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingHorizontal="@dimen/dp_15"
        android:text="@string/introduction_boll"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/text_size_sp_14" />
</LinearLayout>